[package]
name = "mana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_atmosphere = "0.5.0"
bevy_rapier3d = { version = "0.19.0", features = [ "serde-serialize" ] }
bevy_framepace = "0.11.0"
bincode = "1.3.1"
iyes_loopless = "0.9.1"
leafwing-input-manager = "0.7.1"
serde = { version = "1.0", features = [ "derive" ] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1